@@ -7,8 +7,13 @@ The format is based on [[https://keepachangelog.com/en/1.1.0/][Keep a Changelog]
 
 * Unreleased
 
+** Changed
+
+- =vui-list= now returns =vstack= (for vertical, default) or =hstack= (for horizontal) instead of a fragment. This ensures proper indent propagation when nested inside layout containers.
+
 ** Added
 
+- =:indent= and =:spacing= options for =vui-list=.
 - Optional docstring support in =defcomponent= macro.
 - =:no-decoration= option for =vui-button= to render without brackets.
 - =:help-echo= option for =vui-button= to control tooltip. Setting to =nil= disables tooltip generation, providing ~2x faster button creation for bulk rendering.
